--- a/templates/fizzbuzz.html
+++ b/templates/fizzbuzz.html
@@ -1,19 +1,21 @@
+{% extends "base.html" %}
+
+{% block content %}
+
 <ol>
-    
-    
     {% for x in range(1, n+1) %}
         <li>
-    {% if x % 3 == 0 and x % 5 == 0 %}
-        FizzBuzz
-    {% elif x % 3 == 0 %}
-        Fizz
-    {% elif x % 5 == 0 %}
-        Buzz
-    {% else %}
-        {{x}}
-    {% endif %}
+        {% if x % 3 == 0 and x % 5 == 0 %}
+            FizzBuzz
+        {% elif x % 3 == 0 %}
+            Fizz
+        {% elif x % 5 == 0 %}
+            Buzz
+        {% else %}
+            {{x}}
+        {% endif %}
         </li>
     {% endfor %}
-
-
 </ol>
+
+{% endblock %}
