--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -1,12 +1,22 @@
+{% extends "base.html" %}
+
+{% block content %}
 <form>
     <h2> Enter your food </h2>
     <input type="text" name="food">
-    <!--<input type="hidden" name="food" value="eggs">-->
     <button>Add</button>
-    <ol>
-        {% for x in range(1, n+1) %}
-            <li>{{x ** 2}}</li>
+    {% if items %}
+        {% for item in items %}
+        <input type="hidden" name="food" value="{{item}}">
         {% endfor %}
-
-    </ol>
+    {% endif %}
 </form>
+
+<ul>
+    {% if items %}
+        {% for item in items %}
+        <li>{{item}}</li>
+        {% endfor %}
+    {% endif %}
+</ul>
+{% endblock %}
