bug - toggled is_encrypted value

--- a/templates/rot13.html
+++ b/templates/rot13.html
@@ -11,10 +11,11 @@
 
 <h2>User text</h2>
 {{user_text}}
-
-<h3>Char list</h3>
-{{char_list}}
-<ol>
+<br>
+<h2>Output text</h2>
+{{text}}
+<h2>Encryption</h2>
+{{is_encrypted}}
 
 </ol>
 
